fix: handle truncated words with tooltip

--- a/web-components/src/components/taskitem/scss/task-item.scss
+++ b/web-components/src/components/taskitem/scss/task-item.scss
@@ -230,6 +230,16 @@
         font-size: $taskitem-restyle-font-size;
         line-height: 20px;
         color: var(--taskitem-text-color);
+        width: auto;
+      }
+      &_queue_time {
+        font-size: $taskitem-restyle-font-size;
+        line-height: 20px;
+        color: var(--taskitem-text-color);
+        margin-left: 4px;
+        min-width: 70px;
+        @include text-dots;
+
         &_dot {
           background-color: var(--taskitem-restyle-dot-color);
           border-radius: $taskitem-border-circle;
@@ -237,6 +247,9 @@
           width: 4px;
           display: inline-flex;
           margin: 3px 0px;
+        }
+        ::slotted(*) {
+          display: inline-flex;
         }
       }
       &_chat {
